tests/__snapshots__/validation-when-not-supported-action-stderr.snap.txt
Error: The '.isSupportedWith()' action is not supported.

  5 | 
  6 | // @ts-expect-error!
  7 | when(pipe).isSupportedWith({ valid: true }, expect(pick).type.toBeCallableWith("valid"));
    |            ~~~~~~~~~~~~~~~
  8 | 

      at ./__typetests__/not-supported-action.tst.ts:7:12

Error: Expression is not callable with the given argument.

Argument of type '"valid"' is not assignable to parameter of type 'never'.

  5 | 
  6 | // @ts-expect-error!
  7 | when(pipe).isSupportedWith({ valid: true }, expect(pick).type.toBeCallableWith("valid"));
    |                                                                                ~~~~~~~
  8 | 

      at ./__typetests__/not-supported-action.tst.ts:7:80

